# aicoder

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  artifacts.py  build-windows.ps1  build.bat  build.sh  claude_advisor.py  claude_agents_sdk.py  claude_citations.py  claude_code.py  claude_code_exec.py  claude_cost_optimizer.py  claude_fable5.py  claude_files.py  claude_github.py  claude_models.py  claude_mythos5.py  claude_research.py  claude_router.py  claude_search.py  claude_thinking.py  claude_tokens.py  claude_tools.py  conftest.py  cowork.py  docker-compose.yml  installer.nsi  main.py  pyproject.toml  (+9 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
agents/: claude_advisor.py  claude_agents_sdk.py  claude_chrome.py  claude_eval.py  claude_evals.py  claude_excel.py  claude_fable5.py  claude_git.py  claude_github.py  claude_interactive.py  claude_live.py  claude_mythos5.py  claude_powerpoint.py  claude_prompt_optimizer.py  claude_rag.py  claude_research.py  claude_router.py  claude_sessions.py  claude_workflow.py  cowork.py
ai_coder_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
api/: claude_admin_api.py  claude_batch.py  claude_cache.py  claude_citations.py  claude_compliance_api.py  claude_files.py  claude_models.py  claude_search.py  claude_skills_api.py  claude_stream.py  claude_structured.py  claude_vision.py
core/: claude_code.py  claude_code_exec.py  claude_hooks_perms_plan.py  coder.py  (+14 more)
(+115 files in other folders)
