[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zcoder"
version = "1.23.0"
description = "AI Model Coder CLI — enterprise-grade edition"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "build/*", "dist/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
